Fixed the following styles: 1. Landing page's modal 2. Calc page: layout in mobile, result's buttons, "重新選擇" button, & modals' height 3. About page: aligned member cards' height 4. Registration page 5. Edit page (when user log in with native account made in our app)

--- a/app/assets/stylesheets/frontend/about.scss
+++ b/app/assets/stylesheets/frontend/about.scss
@@ -11,6 +11,9 @@
 
 // style for member card
 .col-12.col-md-6.col-lg-3.item { padding-bottom: 3rem; }
+p.card-text { font-size: 13px; }
+
+
 
 .btn.btn-index {
   color: #fff;
