--- a/app/assets/stylesheets/frontend/calc.scss
+++ b/app/assets/stylesheets/frontend/calc.scss
@@ -26,7 +26,7 @@
   font-weight: 600;
   border-radius: 3px;
   line-height: 1;
-  padding: 12px 15px;
+  padding: 6px 15px;
   margin: 0 5px;
 }
 #calc-drinks {
@@ -149,7 +149,7 @@ button#to-result {
   font-weight: 600;
   border-radius: 3px;
   line-height: 1;
-  padding: 12px 30px
+  padding: 6px 30px
 }
 .label_name-user-define { 
   display: block; 
@@ -190,6 +190,8 @@ button#to-result {
 // RWD section
 // // Support for iPhone 5
 @media screen and (max-width: 320px) and (max-height: 568px) {
+  #calc-drinks { height: 150px; }
+
   #calc-drinks.calc-drinks-mini {
     height: 80px;
   }
@@ -203,6 +205,7 @@ button#to-result {
     height: 75vh;
   }
 
+  #calc-drinks { height: 150px; }
   // for '/calc/user_define/'
   #calc-drinks.calc-drinks-mini {
     height: 160px;
@@ -211,6 +214,6 @@ button#to-result {
 // // for tablets
 @media screen and (max-width: 991px) {
   .content-left-wrapper{
-    height: 100vh;
+    height: 88vh;
   }
 }
