--- a/app/assets/stylesheets/frontend/animation/animation_man-figure.scss
+++ b/app/assets/stylesheets/frontend/animation/animation_man-figure.scss
@@ -114,7 +114,7 @@
     }
 
     button#to-time-unit {
-      bottom: -1rem;
+      bottom: -6rem;
     }
   }
 }
@@ -128,12 +128,13 @@
     }
 
     .container-btn {
+      height: 14rem;
       top: 6%;
       transform: none;
     }
 
     button#to-time-unit {
-      bottom: -6rem;
+      bottom: -1rem;
     }
   }
 }
@@ -148,12 +149,12 @@
     }
 
     .container-btn {
-      height: 18rem;
+      height: 14rem;
       top: 13%;
       transform: none;
     }
     button#to-time-unit {
-      bottom: -6rem;
+      bottom: -1rem;
     }
   }
 }
